<resources>
    <string name="app_name">GroupProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kitchen">KitchenActivity</string>
    <string name="title_activity_livingroom">LivingRoomActivity</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_help_button">OK</string>
    <string name="dialog_house_text">"\n Author: Michael Palmer \n Version: 1 \n Instructions: \n Click on setting to see detailed controls.</string>
    <string name="dialog_garage_text">"\n Author: Michael Palmer \n Version: 1 \n Instructions: \n Click 'Off' button to turn off garage light. \n Click 'On' button to turn on garage light. \n Click 'Open' button to open garage door. \n Click 'Close' button to close garage door.</string>
    <string name="dialog_house_temperature_text">"\n Author: Michael Palmer \n Version: 1 \n Instructions: \n Click 'Set' button to set house temperature.</string>
    <string name="dialog_outside_weather_text">"\n Author: Michael Palmer \n Version: 1 \n Instructions: \n Progress bar shows progress of outside weather download. \n Current, Minimum, and Maximum Outside Temperatures are populated.</string>
    <string name="garageDoorTitle">Garage Door</string>
    <string name="gdCloseButton">Close</string>
    <string name="gdStopButton">Stop</string>
    <string name="gdOpenButton">Open</string>
    <string name="gdOpenedTextView">Opened</string>
    <string name="gdClosedTextView">Closed</string>
    <string name="garageLightTitle">Garage Light</string>
    <string name="glSwitchText">OFF / ON</string>
    <string name="houseTemperatureTitle">House Temperature</string>
    <string name="htCurTempLabel">Current temperature: </string>
    <string name="htNewTempLabel">Enter new temperature: </string>
    <string name="htSetButton">Set</string>
    <string name="htHintEditText">15 - 25 °C range</string>
    <string name="outsideWeatherTitle">Outside Weather</string>

    <string name="car_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Click on setting to see detailed controls.</string>
    <string name="gps_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Click to launch gps navigator.</string>
    <string name="temp_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Set temperature for front and back.</string>
    <string name="lights_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Turn on/off normal and high headlights, set dimmable light.</string>
    <string name="radio_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Select the radio station and click play button.</string>
    <string name="drive_text">"\n Author: Eduard Tikhomirov \n Version: 1 \n Instructions: \n Enter the driving information.</string>

    <string name="lr_text">"\n Author: Anastasia Fridrikova \n Version: 1 \n Instructions: \n Click on setting to see detailed controls.</string>
    <string name="lamp_text">"\n Author: Anastasia Fridrikova \n Version: 1 \n Instructions: \n Turn off/of standard light, dimmable light and color light.</string>
    <string name="tv_text">"\n Author: Anastasia Fridrikova \n Version: 1 \n Instructions: \n Turn off/on TV and select a channel.</string>
    <string name="blinds_text">"\n Author: Anastasia Fridrikova \n Version: 1 \n Instructions: \n Select blinds position.</string>

    <string name="launch_text">"\n Authors: Michael Palmer, Anastasia Fridrikova, Eduard Tikhomirov, Mahesh Badge \n Version: 1 \n Instructions: \n Select activity</string>

    //Living Room
    <string name="LRswitch">OFF/ON</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="purple">PURPLE</string>
    <string name="blue">BLUE</string>

    <string name="ask_channel">Please enter a channel:</string>
    <string name="enter">ENTER</string>

    <string name="closed">closed</string>
    <string name="open">open</string>

    //Automobile
    <string name="navigator">Launch navigator</string>
    <string name="ask_front_temp">Set temperature in the front:</string>
    <string name="hint_front">front temp</string>
    <string name="ask_back_temp">Set temperature in the back:</string>
    <string name="hint_back">back temp</string>
    <string name="set">SET</string>
    <string name="norm">Normal headlights</string>
    <string name="high">High headlights</string>
    <string name="inside">Light inside the car</string>
    <string name="radio">Select Radio Station</string>

    <string name="how_far">How far to drive?</string>
    <string name="km_hint">number of km</string>
    <string name="save">Save</string>
    <string name="odometer">Odometer</string>
    <string name="total_km">Total km:</string>
    <string name="reset">RESET</string>
    <string name="level">Fuel Level</string>
    <string name="level_hint">fuel level</string>
    <string name="est">Estimated km car can drive:</string>
    <string name="fill">FILL TANK</string>

    <string name="kitchendialog">Author: Mahesh Bagde \n MICROWAVE: Enter the time by selecting any of the presented options and click START\n FRIDGE: Enter your desired temperature and click on Set\n LIGHT: Click on the ON/OFF switch to operate the light</string>
    <string name="kitchen_light_dialog">Author: Mahesh Bagde \n Click on the ON/OFF switch to operate the light</string>
    <string name="microwave_dialog">Author: Mahesh Bagde \n Enter the time by selecting any of the presented options and click START</string>
    <string name="fridge_dialog">Author: Mahesh Bagde \n Enter your desired temperature and click on Set</string>

    <string name="plus_10_mins_button">+ 10 mins</string>
    <string name="plus_1_minute_button">+ 1 min</string>
    <string name="plus_5_secs_button">+ 5 secs</string>
    <string name="defrost_button">DEFROST</string>
    <string name="bake_button">BAKE</string>
    <string name="quick_30_button">QUICK 30</string>
    <string name="stop_button">STOP</string>
    <string name="reset_button">RESET</string>
    <string name="start_button">START</string>
    <string name="current_freezer_temperature">Current Freezer Temperature</string>
    <string name="new_freezer_temperature">New Freezer Temperature</string>
    <string name="set_freezer_button">Set</string>
    <string name="current_fridge_temperature">Current Fridge Temperature</string>
    <string name="new_fridge_temperature">New Fridge Temperature</string>
    <string name="set_fridge_button">Set</string>
    <string name="on_off_switch">ON / OFF</string>

</resources>
