<?xml version="1.0" encoding="utf-8"?>

<!--
File: house_temperature_fragment.xml
Course: CST2335
Lab Sections: 013 & 015
Author: Michael Palmer
Date: Dec 2017
Description: Final Project
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/houseTemperatureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView17"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="@string/htSetTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <Button
        android:text="@string/htSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/htSetButton"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/htHintEditText"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="11dp" />

</RelativeLayout>
