<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Switch
        android:text="@string/LRswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/switch_normal"
        android:layout_above="@+id/high_light"
        android:layout_toEndOf="@+id/normal_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/normallight"
        android:id="@+id/normal_light"
        android:layout_below="@+id/text_normal"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/norm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_normal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_high"
        android:layout_below="@+id/switch_normal"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/headlight"
        android:layout_marginTop="17dp"
        android:id="@+id/high_light"
        android:layout_below="@+id/normal_light"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/LRswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/switch_high"
        android:layout_alignBottom="@+id/high_light"
        android:layout_alignStart="@+id/switch_normal" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/lamp"
        android:id="@+id/car_light"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_car"
        android:max="120"
        android:progress="60"
        android:layout_alignBottom="@+id/car_light"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="21dp"
        android:layout_toEndOf="@+id/car_light" />

    <TextView
        android:text="@string/inside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19"
        android:layout_below="@+id/switch_high"
        android:layout_alignParentStart="true" />

</RelativeLayout>